报告书 历史列表 新增兴趣班

--- a/teacher_html/teacher_reports-more.html
+++ b/teacher_html/teacher_reports-more.html
@@ -21,6 +21,7 @@
 
 <div class="scroll rel">
     <div class="zmbox grade-l zindex2">
+        <span class="grade-cell"><a class="zm-s" href="#g001">兴趣</a></span>
         <span class="grade-cell"><a class="zm-s" href="#g01">小一</a></span>
         <span class="grade-cell"><a class="zm-s" href="#g02">小二</a></span>
         <span class="grade-cell"><a class="zm-s" href="#g03">小三</a></span>
@@ -39,6 +40,28 @@
 
 <!--报告书-->
 <div class="page-bd mar_l15 pad_l15">
+      <div class="weui_cells_title mar_l15" id="g001">兴趣班</div>
+        <div class="weui_cells weui_cells_radio mar_l15">
+            <div class="weui-flex">
+              <div class="weui-flex-item">
+                <div class="rep_users placeholder rel rep_cell">
+                 <a href="teacher_reports-detail.html">
+                  <div class="center icon-baogao icon abs f100 zindex f-blue_b rep_icon"></div> 
+                  <div class="f12  tcenter mar_tb5 zindex2 f-blue_b"><p class="mar_b5">17-18学年</p><p>（一）</p></div> 
+                 </a>
+                </div>
+              </div>
+              <div class="weui-flex-item">
+                <div class="rep_users placeholder rel rep_cell">
+                 <a href="teacher_reports-detail.html">
+                  <div class="center icon-baogao icon abs f100 zindex f-blue_b rep_icon"></div> 
+                  <div class="f12  tcenter mar_tb5 zindex2 f-blue_b"><p class="mar_b5">17-18学年</p><p>（二）</p></div> 
+                 </a>
+                </div>
+              </div>
+              
+          </div>
+        </div>
       <div class="weui_cells_title mar_l15" id="g01">一年级</div>
         <div class="weui_cells weui_cells_radio mar_l15">
             <div class="weui-flex">
