选择学生列表

--- a/teacher_html/stus_list.html
+++ b/teacher_html/stus_list.html
@@ -84,7 +84,7 @@
           
         </div>
     <div class="bd scroll weui-border-t bg-white">
-        <div class="zmbox bg-white">
+        <div class="zmbox bg-white zindex2">
             <a class="zm">A</a>
             <a class="zm">B</a>
             <a class="zm">C</a>
