--- a/teacher_html/teacher_reports-detail.html
+++ b/teacher_html/teacher_reports-detail.html
@@ -20,7 +20,8 @@
     <div class="weui-header-right"><a href="teacher_reports-more.html" class="icon icon-baogao f20"></a></div> 
 </div>
 <!--报告书-->
-
+<div class="rep-det_bg">
+</div>
 
 </body>
 </html>
