--- a/teacher_html/teacher_reports-nodata.html
+++ b/teacher_html/teacher_reports-nodata.html
@@ -16,7 +16,7 @@
 
 <div class="weui_btn_primary weui-header z-ind1000" id="g00"> 
     <div class="weui-header-left"> <a href="teacher_reports-detail.html" class="icon icon-icon1 f20"></a>  </div>
-    <h1 class="weui-header-title">王牧之</h1>
+    <h1 class="weui-header-title">王牧之<span class="f16">-成长档案袋</span></h1>
 </div>
 
     <div class="weui_msg" >
@@ -25,9 +25,6 @@
             <h2 class="weui_msg_title">暂无数据</h2>
         </div>
     </div>
-
-
-
 
 </body>
 </html>
