Signed-off-by: kathaline

--- a/teacher_html/stus_list.html
+++ b/teacher_html/stus_list.html
@@ -53,7 +53,7 @@
                
                <label class="weui_cell weui_check_label" for="weui-select-id-邓晓桢">   
                     <div class="weui_cell_bd weui_cell_primary"> 
-                     <img class="weui_media_appmsg_thumb circle border wh_40 center left" src="../images/teacher_tx.jpg" alt=""> <p class="f16 l40 mar_l15 left">邓晓桢</p>  
+                     <img class="weui_media_appmsg_thumb circle border wh_40 center left" src="../images/teacher_tx.jpg" alt=""> <p class="f16 l40 mar_l15 left">邓晓桢1111</p>  
                     </div>         
                     <div class="weui_cell_ft">            
                      <input type="checkbox" class="weui_check" name="weui-select" id="weui-select-id-邓晓桢" value="3"  data-title="邓晓桢">            
