选择学生列表

--- a/teacher_html/stus_list.html
+++ b/teacher_html/stus_list.html
@@ -21,7 +21,7 @@
       <h1 class="weui-header-title" >选择学生</h1>
       <div class="weui-header-right"><a href="teacher_evaluate.html" class="picker-button close-picker weui_btn weui_btn_mini bg-green">确认添加</a></div> 
   </div>
-    <div class="page-bd">
+    <div class="page-bd zindex">
           <div class=" bg-white">
             <div class="weui_cells_title upper bg-white">C</div>
             <div class="weui_cells weui_cells_checkbox"> 
@@ -37,7 +37,7 @@
                </label>       
                <label class="weui_cell weui_check_label" for="weui-select-id-曹骏">   
                     <div class="weui_cell_bd weui_cell_primary"> 
-                     <img class="weui_media_appmsg_thumb circle border wh_40 center left" src="../images/teacher_tx.jpg" alt=""> <p class="f16 l40 mar_l15 left">曹骏</p>  
+                     <img class="weui_media_appmsg_thumb circle border wh_40 center left" src="../images/teacher_tx.jpg" alt=""> <p class="f16 l40 mar_l15 left">曹骏01</p>  
                     </div>         
                     <div class="weui_cell_ft">            
                      <input type="checkbox" class="weui_check" name="weui-select" id="weui-select-id-曹骏" value="2"  data-title="曹骏">            
@@ -83,8 +83,8 @@
           </div>
           
         </div>
-    <div class="bd scroll weui-border-t bg-white">
-        <div class="zmbox bg-white zindex2">
+    <div class="bd scroll zindex2">
+        <div class="zmbox">
             <a class="zm">A</a>
             <a class="zm">B</a>
             <a class="zm">C</a>
