新增教师、学生报告书页面

--- a/student_html/stu_function.html
+++ b/student_html/stu_function.html
@@ -73,7 +73,7 @@ document.addEventListener("DOMContentLoaded", function(){
                         <p class="weui_media_desc"><span>荣誉申报</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>荣誉信息</span></p>
                     </div>
                 </a>
-                <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <a href="stu_reports-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd">
                         <span class="icon icon-plus-datareport f45 middle f-blue"></span>
                     </div>
