历史报告书icon修改

--- a/student_html/stu_reports-detail.html
+++ b/student_html/stu_reports-detail.html
@@ -17,7 +17,7 @@
 <div class="weui_btn_primary weui-header z-ind1000"> 
     <div class="weui-header-left"> <a href="stu_function.html" class="icon icon-icon1 f20"></a>  </div>
     <h1 class="weui-header-title">17-18学年（一）</h1>
-    <div class="weui-header-right"><a href="stu_reports-more.html" class="icon icon-baogao f20"></a></div> 
+    <div class="weui-header-right"><a href="stu_reports-more.html" class="icon icon-lishi1 f20"></a></div> 
 </div>
 <!--报告书-->
 <div class="rel report_p-top">
