--- a/teacher_html/teacher_reports-detail.html
+++ b/teacher_html/teacher_reports-detail.html
@@ -52,7 +52,7 @@ menuBtn.click(function(){menu.toggleClass('active')});
 <div class="weui_btn_primary weui-header z-ind1000"> 
     <div class="weui-header-left"> <a href="teacher_reports.html" class="icon icon-icon1 f20"></a>  </div>
     <h1 class="weui-header-title">17-18学年（一）</h1>
-    <div class="weui-header-right"><a href="teacher_reports-more.html" class="icon icon-baogao f20"></a></div> 
+    <div class="weui-header-right"><a href="teacher_reports-more.html" class="icon icon-lishi1 f20"></a></div> 
 </div>
 <!--报告书-->
 <div class="rel report_p-top">
