--- a/teacher_html/teacher_evaluate.html
+++ b/teacher_html/teacher_evaluate.html
@@ -111,8 +111,8 @@ $('.weui-number-plus').click(function(){
         
         <div class="weui_uploader_bd">
          <ul class="weui_uploader_files left"  id='d3'>
-           <li class="weui_uploader_file tcenter p1 rel"><span class="weui-badge abs stus_del hide" style="display:none;" onClick="$('.p1').fadeOut();">-</span><img class="weui_media_appmsg_thumb circle border wh_40 center" src="../images/teacher_tx.jpg" alt=""><p class="f12 f-666 mar_t5">蔡友勋</p></li>               
-           <li class="weui_uploader_file tcenter p2 rel"><span class="weui-badge abs stus_del hide" style="display:none;" onClick="$('.p2').fadeOut();">-</span><img class="weui_media_appmsg_thumb circle border wh_40 center" src="../images/teacher_tx.jpg" alt=""><p class="f12 f-666 mar_t5">蔡友勋222</p></li>               
+           <li class="weui_uploader_file tcenter p1 rel"><div class=" abs stus_del hide" onClick="$('.p1').fadeOut();" style="display:none;"><span class="weui-badge">-</span></div><img class="weui_media_appmsg_thumb circle border wh_40 center" src="../images/teacher_tx.jpg" alt=""><p class="f12 f-666 mar_t5">蔡友勋</p></li>               
+           <li class="weui_uploader_file tcenter p2 rel"><div class=" abs stus_del hide" onClick="$('.p2').fadeOut();"  style="display:none;"><span class="weui-badge">-</span></div><img class="weui_media_appmsg_thumb circle border wh_40 center" src="../images/teacher_tx.jpg" alt=""><p class="f12 f-666 mar_t5">蔡友勋222</p></li>               
          </ul>
          <span class="add-del_btnns">
          <a class="weui_uploader_input_wrp f35 tcenter f45 f-999 add_btn" href="stus_list.html"></a>
