--- a/teacher_html/teacher_reports-detail.html
+++ b/teacher_html/teacher_reports-detail.html
@@ -84,13 +84,13 @@ menuBtn.click(function(){menu.toggleClass('active')});
          <div class="mar_lr15 pad_tb15">
                 <table class="weui-table f14">
                 <thead>
-                <tr class="f-999"><th>评价指标</th><th>加分</th><th>减分</th></tr>
+                <tr class="f-999"><th>评价指标</th><th>次数</th><th>得分</th></tr>
                 </thead>
                 <tbody>
-                <tr><td>仪容仪表</td><td><span class=" f-orange">21</span></td><td><span class=" f-blue">15</span></td></tr>
-                <tr><td>仪容仪表</td><td><span class=" f-orange">21</span></td><td><span class=" f-blue">15</span></td></tr>
-                <tr><td>仪容仪表</td><td><span class=" f-orange">21</span></td><td><span class=" f-blue">15</span></td></tr>
-                <tr><td>仪容仪表</td><td><span class=" f-orange">21</span></td><td><span class=" f-blue">15</span></td></tr>
+                <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
+                <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
+                <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
+                <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
                 </tbody>
             </table>
             </div>
