教师报告书列表页页面布局样式修改

--- a/teacher_html/teacher_reports.html
+++ b/teacher_html/teacher_reports.html
@@ -82,8 +82,8 @@ $(function(){
 </div>
 <!--报告书-学生列表-->
 <div class="page-bd weui_cells">
-    <div class="weui-flex">
-        <div class="weui-flex-item">
+    <div class="mar_10 rel hidden">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -91,15 +91,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
-          <div class="rep_users placeholder">
-           <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/student1.png" alt=""></div> 
-            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
-           </a>
-          </div>
-        </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -107,7 +99,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -115,25 +107,7 @@ $(function(){
            </a>
           </div>
         </div>
-    </div>
-    <div class="weui-flex">
-        <div class="weui-flex-item">
-          <div class="rep_users placeholder">
-           <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/student1.png" alt=""></div> 
-            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
-           </a>
-          </div>
-        </div>
-        <div class="weui-flex-item">
-          <div class="rep_users placeholder">
-           <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/student1.png" alt=""></div> 
-            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
-           </a>
-          </div>
-        </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -141,17 +115,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
-          <div class="rep_users placeholder">
-           <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/vcode.jpg" alt=""></div> 
-            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
-           </a>
-          </div>
-        </div>
-    </div>
-    <div class="weui-flex">
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -159,7 +123,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -167,7 +131,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -175,7 +139,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -183,9 +147,7 @@ $(function(){
            </a>
           </div>
         </div>
-    </div>
-    <div class="weui-flex">
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -193,15 +155,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
-          <div class="rep_users placeholder">
-           <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/student1.png" alt=""></div> 
-            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
-           </a>
-          </div>
-        </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -209,7 +163,7 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -217,25 +171,7 @@ $(function(){
            </a>
           </div>
         </div>
-    </div>
-    <div class="weui-flex">
-        <div class="weui-flex-item">
-          <div class="rep_users placeholder">
-           <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/student1.png" alt=""></div> 
-            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
-           </a>
-          </div>
-        </div>
-        <div class="weui-flex-item">
-          <div class="rep_users placeholder">
-           <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/student1.png" alt=""></div> 
-            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
-           </a>
-          </div>
-        </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
             <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
@@ -243,10 +179,18 @@ $(function(){
            </a>
           </div>
         </div>
-        <div class="weui-flex-item">
+        <div class="cell-rep_users">
           <div class="rep_users placeholder">
            <a href="teacher_reports-detail.html">
-            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/vcode.jpg" alt=""></div> 
+            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
+            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
+           </a>
+          </div>
+        </div>
+        <div class="cell-rep_users">
+          <div class="rep_users placeholder">
+           <a href="teacher_reports-detail.html">
+            <div class="pics center"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
             <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p> 
            </a>
           </div>
