--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -55,7 +55,7 @@ document.addEventListener("DOMContentLoaded", function(){
                         <p class="weui_media_desc"><span>日常评价</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>评价统计</span></p>
                     </div>
                 </a>
-                <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <a href="teacher_health-list.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd">
                         <span class="icon icon-jiankang f45 middle f-red"></span>
                     </div>
