--- a/teacher_html/teacher_health-statistics.html
+++ b/teacher_html/teacher_health-statistics.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="../css/qky_grow.css"/>
 <link rel="stylesheet" type="text/css" href="../icon_font/iconfont.css"/>
 <script src="../js/zepto.min.js"></script>
+<script src="../js/echarts.js" type="text/javascript"></script>
 <!--下拉收起-->
 <script type="text/javascript">
 function selectmenu(n){
@@ -39,25 +40,12 @@ $(function(){
 	  });    
 
 </script>
-<!--搜索框-->
 <script>
- $(function(){
- $('.searchbar_wrap').searchBar({
-    cancelText:"取消",
-    searchText:'关键字',
-    onfocus: function (value) {
-    },
-    onblur:function(value) {
-    },
-    oninput: function(value) {
-    },
-    onsubmit:function(value){
-    },
-    oncancel:function(){
-    },
-    onclear:function(){
-    }});
-  });     
+  $(function(){
+	
+	   $('#tab1').tab({defaultIndex:0,activeClass:"tab-green"});
+	  });    
+      
 </script>
 
 </head>
@@ -66,74 +54,42 @@ $(function(){
 	
 
 <div class="weui_btn_primary weui-header z-ind1000"> 
-    <div class="weui-header-left"> <a href="teacher_function.html" class="icon icon-shouye f20"><span class=" f15">首页</span></a>  </div>
+    <div class="weui-header-left"> <a href="teacher_health-list.html" class="icon icon-icon1 f20"></a>  </div>
     <h1 class="weui-header-title"  onclick="selectmenu('1');">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14 f-green"></i></h1>
-    <div class="weui-header-right"><a href="javascript:;" onclick="selectmenu('3');" class="weui_icon_search"></a></div> 
+
 </div>
-<div id="menu_3" style="display:none;">
-    <div class="searchbar_wrap">
+<div class="weui_tab " style="height:44px;" id="tab1"><!--tab-fixed添加顶部-->
+    <div class="weui_navbar" style="height:44px;">
+        <div class="weui_navbar_item  ">
+            <i class="icon icon-nan f20 middle mar_r5"></i>男生<span class="f14">（23人）</span>
+        </div>
+        <div class="weui_navbar_item">
+            <i class="icon icon-nv f20 middle mar_r5"></i>女生<span class="f14">（23人）</span>
+        </div>
     </div>
 </div>
-<!--体质健康列表-->
+<!--体质健康统计-->
 <div class="weui_panel_bd ">
-   <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
-                <div class="weui_media_hd circle roles_pic bs">
-                    <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
-                </div>
-                <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="mar_r5 f15">王牧之</span><span class="circle bg-blue f-white f12 weui-badge">♂</span><span class="mar_l5 f13" title="201701001201701001">201701001201701001</span></h3>
-                    <p class="weui_media_desc f-blue"><span><i class="icon icon-bmi f18 middle mar_r5"></i>正常</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-fgn f18 middle mar_r5"></i>优秀</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-paobu f18 middle mar_r5"></i>优秀</span></p>
-                </div>
-            </a>
-    </div>        
-   <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
-                <div class="weui_media_hd circle roles_pic bs">
-                    <img class="weui_media_appmsg_thumb circle" src="../images/student1.png" alt="">
-                </div>
-                <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="mar_r5 f15">王牧阳</span><span class="circle bg-orange f-white f12 weui-badge">♀</span><span class="mar_l5 f13" title="201701001201701001">201701001201701001</span></h3>
-                    <p class="weui_media_desc f-blue"><span><i class="icon icon-bmi f18 middle mar_r5"></i>正常</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-fgn f18 middle mar_r5"></i>优秀</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-paobu f18 middle mar_r5"></i>优秀</span></p>
-                </div>
-            </a>
-    </div>        
-   <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
-                <div class="weui_media_hd circle roles_pic bs">
-                    <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
-                </div>
-                <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="mar_r5 f15">王牧之</span><span class="circle bg-blue f-white f12 weui-badge">♂</span><span class="mar_l5 f13" title="201701001201701001">201701001201701001</span></h3>
-                    <p class="weui_media_desc f-blue"><span><i class="icon icon-bmi f18 middle mar_r5"></i>正常</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-fgn f18 middle mar_r5"></i>优秀</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-paobu f18 middle mar_r5"></i>优秀</span></p>
-                </div>
-            </a>
-    </div>        
-   <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
-                <div class="weui_media_hd circle roles_pic bs">
-                    <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
-                </div>
-                <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="mar_r5 f15">王牧之</span><span class="circle bg-blue f-white f12 weui-badge">♂</span><span class="mar_l5 f13" title="201701001201701001">201701001201701001</span></h3>
-                    <p class="weui_media_desc f-blue"><span><i class="icon icon-bmi f18 middle mar_r5"></i>正常</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-fgn f18 middle mar_r5"></i>优秀</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-paobu f18 middle mar_r5"></i>优秀</span></p>
-                </div>
-            </a>
-    </div>      
+   <div class="weui_cells">
+      <div class="weui_cells_title">学生身高/体重情况：</div>
+      <div class="weui_cell">
+          <div class="echart01" id="all-sgtz"></div>
+      </div>
+   </div>        
+   <div class="weui_cells">
+      <div class="weui_cells_title">学生BMI情况：</div>
+      <div class="weui_cell">
+             <div class="echart01" id="all_ech"></div>
+      </div>
+   </div>        
+   <div class="weui_cells">
+      <div class="weui_cells_title">各体测项目情况：</div>
+      <div class="weui_cell">
+             <div class="echart01"  id="all_tc"></div>
+      </div>
+   </div>        
 </div>
    
-<div class=" pad_b60"></div> 
-
-<section class="weui-menu f16">
-        
-    <div class="weui-menu-inner">
-     <a href="teacher_health-statistics.html" class="weui_tabbar_item page-bd">
-        <em class="icon icon-tongji f-orange"></em>
-        <span>健康统计</span>
-     </a> 
-    </div>
-</section>
-
 <!--弹出选择班级--> 
 <div class="weui_msg_img hide abs" id="menu_1" style="display:none;">
 <div class="weui_msg_img"></div>
@@ -626,6 +582,6 @@ $(function(){
     </div>
 </div>
 </div>
-
+<script src="../js/echarts-one.js" type="text/javascript"></script>
 </body>
 </html>
