标题显示中间区域样式修改

--- a/teacher_html/teacher_health-list.html
+++ b/teacher_html/teacher_health-list.html
@@ -77,18 +77,18 @@ $(function(){
 <!--体质健康列表-->
 <div class="weui_panel_bd ">
    <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
                 </div>
                 <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="mar_r5 f15">王牧之</span><span class="circle bg-blue f-white f12 weui-badge">♂</span><span class="mar_l5 f13" title="201701001201701001">201701001201701001</span></h3>
+                    <h3 class="weui_media_title f-black"><span class="mar_r5 f15">刘力扬</span><span class="circle bg-blue f-white f12 weui-badge">♂</span><span class="mar_l5 f13" title="201701001201701001">201701001201701001</span></h3>
                     <p class="weui_media_desc f-blue"><span><i class="icon icon-bmi f18 middle mar_r5"></i>正常</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-fgn f18 middle mar_r5"></i>优秀</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-paobu f18 middle mar_r5"></i>优秀</span></p>
                 </div>
             </a>
     </div>        
    <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/student1.png" alt="">
                 </div>
@@ -99,7 +99,7 @@ $(function(){
             </a>
     </div>        
    <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
                 </div>
@@ -110,7 +110,7 @@ $(function(){
             </a>
     </div>        
    <div class="weui_panel weui_panel_access mar_tb12">
-            <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
                 </div>
