--- a/teacher_html/teacher_health-rpt.html
+++ b/teacher_html/teacher_health-rpt.html
@@ -16,37 +16,16 @@
 
 <div class="weui_btn_primary weui-header z-ind1000"> 
     <div class="weui-header-left"> <a href="teacher_health-list.html" class="icon icon-icon1 f20"></a>  </div>
-    <h1 class="weui-header-title"  onclick="selectmenu('1');">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14 f-green"></i></h1>
+    <h1 class="weui-header-title" >刘力扬</h1>
 
 </div>
-<div class="weui_tab " style="height:44px;" id="tab1"><!--tab-fixed添加顶部-->
-    <div class="weui_navbar" style="height:44px;">
-        <div class="weui_navbar_item  ">
-            <i class="icon icon-nan f20 middle mar_r5"></i>男生<span class="f14">（23人）</span>
-        </div>
-        <div class="weui_navbar_item">
-            <i class="icon icon-nv f20 middle mar_r5"></i>女生<span class="f14">（23人）</span>
-        </div>
-    </div>
-</div>
-<!--体质健康统计-->
+
+<!--体质健康报告-->
 <div class="weui_panel_bd ">
    <div class="weui_cells">
       <div class="weui_cells_title">学生身高/体重情况：</div>
       <div class="weui_cell">
           <div class="echart01" id="all-sgtz"></div>
-      </div>
-   </div>        
-   <div class="weui_cells">
-      <div class="weui_cells_title">学生BMI情况：</div>
-      <div class="weui_cell">
-             <div class="echart01" id="all_ech"></div>
-      </div>
-   </div>        
-   <div class="weui_cells">
-      <div class="weui_cells_title">各体测项目情况：</div>
-      <div class="weui_cell">
-             <div class="echart01"  id="all_tc"></div>
       </div>
    </div>        
 </div>
