教师体质健康页面

--- a/teacher_html/teacher_health-rpt.html
+++ b/teacher_html/teacher_health-rpt.html
@@ -22,10 +22,46 @@
 
 <!--体质健康报告-->
 <div class="weui_panel_bd ">
+   <div class="weui_panel weui_panel_access mar_tb12">
+        <div class="weui_media_box weui_media_appmsg">
+            <div class="weui_media_hd circle roles_pic bs">
+                <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
+            </div>
+            <div class="weui_media_bd">
+                <h3 class="weui_media_title f-black"><span class="mar_r5 f15">刘力扬</span><span class="circle bg-blue f-white f12 weui-badge">♂</span><span class="mar_l5 f13" title="201701001201701001">201701001201701001</span></h3>
+                <p class="weui_media_desc">一年级(1)班</p>
+            </div>
+        </div>
+   </div>
    <div class="weui_cells">
-      <div class="weui_cells_title">学生身高/体重情况：</div>
+      <div class="weui_cells_title">体育测试项目：</div>
       <div class="weui_cell">
-          <div class="echart01" id="all-sgtz"></div>
+          <table width="100%" border="0" class="weui-table02">
+            <tr>
+              <td width="46%"><i class="icon icon-shengao mar_r10 f-blue f26 middle"></i><span>177 cm</span></td>
+              <td width="30%" rowspan="2"><i class="icon icon-bmi mar_r10 f-blue f26 middle"></i><span>13.6</span></td>
+              <th width="24%" rowspan="2" scope="row" align="right"><span class="f18 f-blue">及格</span></th>
+              </tr>
+            <tr>
+              <td><i class="icon icon-tzzb mar_r10 f-blue f26 middle"></i><span>66 kg</span></td>
+              </tr>
+            <tr>
+              <td><i class="icon icon-fgn mar_r10 f-blue f26 middle"></i><span>肺    活    量</span></td>
+              <td><span>1700ml</span></td>
+              <th scope="row" align="right"><span class="f18 f-orange">优秀</span></th>
+              </tr>
+            <tr>
+              <td><i class="icon icon-paobu mar_r10 f-blue f26 middle"></i><span>50    米   跑</span></td>
+              <td><span>1700ml</span></td>
+              <th scope="row" align="right"><span class="f18 f-blue_b">良好</span></th>
+              </tr>
+            <tr>
+              <td><i class="icon icon-zuozhao mar_r10 f-blue f26 middle"></i><span>坐位体前屈</span></td>
+              <td><span>1700ml</span></td>
+              <th scope="row" align="right"><span class="f18 f-999">不及格</span></th>
+              </tr>
+          </table>
+
       </div>
    </div>        
 </div>
