新增学生体质健康页面

--- a/student_html/stu_health-rpt.html
+++ b/student_html/stu_health-rpt.html
@@ -15,7 +15,7 @@
 	
 
 <div class="weui_btn_primary weui-header z-ind1000"> 
-    <div class="weui-header-left"> <a href="teacher_health-list.html" class="icon icon-icon1 f20"></a>  </div>
+    <div class="weui-header-left"> <a href="stu_function.html" class="icon icon-icon1 f20"></a>  </div>
     <h1 class="weui-header-title" >刘力扬</h1>
 
 </div>
