体质健康页面更新

--- a/teacher_html/teacher_health-list.html
+++ b/teacher_html/teacher_health-list.html
@@ -76,7 +76,7 @@ $(function(){
 </div>
 <!--体质健康列表-->
 <div class="weui_panel_bd ">
-   <div class="weui_panel weui_panel_access mar_tb12">
+   <div class="weui_panel weui_panel_access mar_t12">
             <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
@@ -87,7 +87,7 @@ $(function(){
                 </div>
             </a>
     </div>        
-   <div class="weui_panel weui_panel_access mar_tb12">
+   <div class="weui_panel weui_panel_access">
             <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/student1.png" alt="">
@@ -98,7 +98,7 @@ $(function(){
                 </div>
             </a>
     </div>        
-   <div class="weui_panel weui_panel_access mar_tb12">
+   <div class="weui_panel weui_panel_access">
             <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
@@ -109,7 +109,7 @@ $(function(){
                 </div>
             </a>
     </div>        
-   <div class="weui_panel weui_panel_access mar_tb12">
+   <div class="weui_panel weui_panel_access">
             <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
                     <img class="weui_media_appmsg_thumb circle" src="../images/teacher.jpg" alt="">
