调制健康页面调整

--- a/icon_font/demo_fontclass.html
+++ b/icon_font/demo_fontclass.html
@@ -151,6 +151,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-tishi"></i>
+                    <div class="name">提示</div>
+                    <div class="fontclass">.icon-tishi</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-icon-yxj-record"></i>
                     <div class="name">记录</div>
                     <div class="fontclass">.icon-icon-yxj-record</div>
