--- a/teacher_html/class_list.html
+++ b/teacher_html/class_list.html
@@ -10,20 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../icon_font/iconfont.css"/>
 <script src="../js/zepto.min.js"></script>
 <script src="../js/echarts.js" type="text/javascript"></script>
-<!--下拉收起-->
 <script type="text/javascript">
-function selectmenu(n){
-var eleMore = document.getElementById("menu_"+n);
-if(eleMore.style.display=="none"){
-eleMore.style.display = 'block';
-$("#cell_"+n).removeClass("icon-zhankaijiantou");
-$("#cell_"+n).addClass("icon-shouqijiantou ");
-}else{
-eleMore.style.display = 'none';
-$("#cell_"+n).removeClass("icon-shouqijiantou");
-$("#cell_"+n).addClass("icon-zhankaijiantou");
-}
-}
 $(function(){
 	  $('.js-category').click(function(){
 			$parent = $(this).parent('li');
@@ -40,60 +27,17 @@ $(function(){
 	  });    
 
 </script>
-<script>
-  $(function(){
-	
-	   $('#tab1').tab({defaultIndex:0,activeClass:"tab-green"});
-	  });    
-      
-</script>
-
 </head>
 
 <body ontouchstart>
 	
-
-<div class="weui_btn_primary weui-header z-ind1000"> 
-    <div class="weui-header-left"> <a href="teacher_health-list.html" class="icon icon-icon1 f20"></a>  </div>
-    <h1 class="weui-header-title"  onclick="selectmenu('1');">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14 f-green"></i></h1>
-
+<div class="weui_btn_primary weui-header"> 
+    <div class="weui-header-left"> <a href="teacher_health-list.html" class="icon icon-icon1 f20 btn-slide-bar "></a>  </div>
+    <h1 class="weui-header-title" >选择年级班级</h1>
+    <div class="weui-header-right"><a href="teacher_health-list.html" class="picker-button close-picker weui_btn weui_btn_mini bg-green">确认</a></div> 
 </div>
-<div class="weui_tab " style="height:44px;" id="tab1"><!--tab-fixed添加顶部-->
-    <div class="weui_navbar" style="height:44px;">
-        <div class="weui_navbar_item  tab-green">
-            <i class="icon icon-nan f20 middle mar_r5"></i>男生<span class="f14">（23人）</span>
-        </div>
-        <div class="weui_navbar_item">
-            <i class="icon icon-nv f20 middle mar_r5"></i>女生<span class="f14">（23人）</span>
-        </div>
-    </div>
-</div>
-<!--体质健康统计-->
-<div class="weui_panel_bd ">
-   <div class="weui_cells">
-      <div class="weui_cells_title">学生身高/体重情况：</div>
-      <div class="weui_cell">
-          <div class="echart01" id="all-sgtz"></div>
-      </div>
-   </div>        
-   <div class="weui_cells">
-      <div class="weui_cells_title">学生BMI情况：</div>
-      <div class="weui_cell">
-             <div class="echart01" id="all_ech"></div>
-      </div>
-   </div>        
-   <div class="weui_cells">
-      <div class="weui_cells_title">各体测项目情况：</div>
-      <div class="weui_cell">
-             <div class="echart01"  id="all_tc"></div>
-      </div>
-   </div>        
-</div>
-   
-<!--弹出选择班级--> 
-<div class="weui_msg_img hide abs" id="menu_1" style="display:none;">
-<div class="weui_msg_img"></div>
-<div class="class_checks weui-border-tb tleft">
+<!--选择班级--> 
+<div class="class_checks weui-border-tb tleft mar_t12">
 <div class="page-bd">  
          <ul>
          
@@ -581,7 +525,5 @@ $(function(){
      </ul>
     </div>
 </div>
-</div>
-<script src="../js/echarts-one.js" type="text/javascript"></script>
 </body>
 </html>
