体质健康页面调整

--- a/teacher_html/sex_list.html
+++ b/teacher_html/sex_list.html
@@ -23,7 +23,7 @@
 <div class="class_checks weui-border-tb tleft mar_t12">
 <div class="page-bd">  
                   <div class="weui_cells weui_cells_radio"  style="margin-top: 0px;">
-                      <label class="weui_cell weui_check_label" for="x11">
+                      <label class="weui_cell weui_check_label f16" for="x11">
                           <div class="weui_cell_bd weui_cell_primary">
                               <p>全部性别</p>
                           </div>
@@ -32,7 +32,7 @@
                               <span class="weui_icon_checked"></span>
                           </div>
                       </label>
-                      <label class="weui_cell weui_check_label" for="x12">
+                      <label class="weui_cell weui_check_label f16" for="x12">
           
                           <div class="weui_cell_bd weui_cell_primary">
                               <p>男</p>
@@ -42,7 +42,7 @@
                               <span class="weui_icon_checked"></span>
                           </div>
                       </label>
-                           <label class="weui_cell weui_check_label" for="x13">
+                      <label class="weui_cell weui_check_label f16" for="x13">
           
                           <div class="weui_cell_bd weui_cell_primary">
                               <p>女</p>
