体质健康报告页  调整

--- a/teacher_html/teacher_health-list.html
+++ b/teacher_html/teacher_health-list.html
@@ -71,7 +71,7 @@ $(function(){
 </div>
 <div class="weui_tab " style="height:44px;" id="tab1"><!--tab-fixed添加顶部-->
     <div class="weui_navbar" style="height:44px;">
-            <a href="class_list.html" class="weui_navbar_item f-666 weui-border-r">一年级（2）班）<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14"></i></a>
+            <a href="class_list.html" class="weui_navbar_item f-666 weui-border-r">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14"></i></a>
             <a href="sex_list.html" class="weui_navbar_item f-666">全部性别<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14"></i></a>
     </div>
 </div>
