--- a/teacher_html/teacher_health-rpt.html
+++ b/teacher_html/teacher_health-rpt.html
@@ -51,82 +51,82 @@ $("#cell_"+n).addClass("icon-zhankaijiantou");
    <div class="weui_cells">
       <div class="weui_cells_title">体育测试项目：</div>
       <div class="weui_cell">
-          <table width="100%" border="0" class="weui-table02">
+          <table width="100%" border="0" class="weui-table02 rel">
             <tr>
-              <td width="56%"><i class="icon icon-shengao mar_r5 f-blue f26 middle"></i><span>177 cm</span></td>
+              <td width="56%"><i class="icon icon-shengao mar_r5 f-blue f26"></i><span>177 cm</span></td>
               <td width="22%" rowspan="2"><i class="icon icon-bmi mar_r5 f-blue f26 middle"></i><span>13.6</span></td>
               <th width="22%" rowspan="2" scope="row" align="right"><span class="f16 f-green">正常</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-tzzb mar_r5 f-blue f26 middle"></i><span>66 kg</span></td>
+              <td><i class="icon icon-tzzb mar_r5 f-blue f26"></i><span>66 kg</span></td>
               </tr>
             <tr>
-              <td><i class="icon icon-fgn mar_r5 f-blue f26 middle"></i><span>肺    活    量</span></td>
+              <td><i class="icon icon-fgn mar_r5 f-blue f26"></i><span>肺    活    量</span></td>
               <td><span>1700ml</span></td>
               <th scope="row" align="right"><span class="f16 f-green">优秀</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-paobu mar_r5 f-blue f26 middle"></i><span>50    米   跑</span></td>
+              <td><i class="icon icon-paobu mar_r5 f-blue f26"></i><span>50    米   跑</span></td>
               <td><span>1700ml</span></td>
               <th scope="row" align="right"><span class="f16 f-blue_b">良好</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-zuozhao mar_r5 f-blue f26 middle"></i><span>坐位体前屈</span></td>
+              <td><i class="icon icon-zuozhao mar_r5 f-blue f26"></i><span>坐位体前屈</span></td>
               <td><span>1700ml</span></td>
               <th scope="row" align="right"><span class="f16 f-999">不及格</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-danjiaotiao mar_r5 f-blue f26 middle"></i><span>跳    绳</span></td>
+              <td><i class="icon icon-danjiaotiao mar_r5 f-blue f26"></i><span>跳    绳</span></td>
               <td><span>1700ml</span></td>
               <th scope="row" align="right"><span class="f16 f-orange">及格</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-yangwoqizuo mar_r5 f-blue f26 middle"></i><span>仰卧起坐</span></td>
+              <td><i class="icon icon-yangwoqizuo mar_r5 f-blue f26"></i><span>仰卧起坐</span></td>
               <td><span>1700ml</span></td>
               <th scope="row" align="right"><span class="f16 f-blue_b">良好</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-yundong66 mar_r5 f-blue f26 middle"></i><span>50米*8往返跑</span></td>
+              <td><i class="icon icon-yundong66 mar_r5 f-blue f26"></i><span>50米*8往返跑</span></td>
               <td><span>1700ml</span></td>
               <th scope="row" align="right"><span class="f16 f-orange">及格</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-tiaoyuan mar_r5 f-blue f26 middle"></i><span>立定跳远</span></td>
+              <td><i class="icon icon-tiaoyuan mar_r5 f-blue f26"></i><span>立定跳远</span></td>
               <td><span>1700ml</span></td>
               <th scope="row" align="right"><span class="f16 f-orange">及格</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-tubiaozhizuomoban mar_r5 f-blue f26 middle"></i><span>引体向上（男）</span></td>
+              <td><i class="icon icon-tubiaozhizuomoban mar_r5 f-blue f26"></i><span>引体向上（男）</span></td>
               <td><span>13次</span></td>
               <th scope="row" align="right"><span class="f16 f-green">优秀</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-yangwoqizuo mar_r5 f-blue f26 middle"></i><span>1分钟仰卧起坐（女）</span></td>
+              <td><i class="icon icon-yangwoqizuo mar_r5 f-blue f26"></i><span>1分钟仰卧起坐（女）</span></td>
               <td><span>13次</span></td>
               <th scope="row" align="right"><span class="f16 f-green">优秀</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-paobu mar_r5 f-blue f26 middle"></i><span>1000米跑（男）</span></td>
+              <td><i class="icon icon-paobu mar_r5 f-blue f26"></i><span>1000米跑（男）</span></td>
               <td><span>13.6秒</span></td>
               <th scope="row" align="right"><span class="f16 f-orange">及格</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-paobu mar_r5 f-blue f26 middle"></i><span>800米跑（女）</span></td>
+              <td><i class="icon icon-paobu mar_r5 f-blue f26"></i><span>800米跑（女）</span></td>
               <td><span>20秒</span></td>
               <th scope="row" align="right"><span class="f16 f-green">优秀</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-yundongyouyong mar_r5 f-blue f26 middle"></i><span>100米自由泳（女）</span></td>
+              <td><i class="icon icon-yundongyouyong mar_r5 f-blue f26"></i><span>100米自由泳（女）</span></td>
               <td><span>20秒</span></td>
               <th scope="row" align="right"><span class="f16 f-green">优秀</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-yundonglanqiu mar_r5 f-blue f26 middle"></i><span>篮球三步上篮（男）</span></td>
+              <td><i class="icon icon-yundonglanqiu mar_r5 f-blue f26"></i><span>篮球三步上篮（男）</span></td>
               <td><span>13.6秒</span></td>
               <th scope="row" align="right"><span class="f16 f-orange">及格</span></th>
               </tr>
             <tr>
-              <td><i class="icon icon-sport3 mar_r5 f-blue f26 middle"></i><span>其他运动</span></td>
+              <td><i class="icon icon-sport3 mar_r5 f-blue f26"></i><span>其他运动其他运动其他运动其他运动</span></td>
               <td><span>20秒</span></td>
               <th scope="row" align="right"><span class="f16 f-green">优秀</span></th>
               </tr>
